--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,7 +61,6 @@
   .profile-photo {
     float: left;
     margin: 0 5% 80px 0;
-    border-radius: 0;
   }
 }
 
@@ -118,11 +117,6 @@
     width: 35%;
   }
 
-  #intro {
-    padding-top: 250px;
-    padding-bottom: 150px;
-  }
-
   #modal {
     width: 20%;
     height: 45%;
@@ -175,8 +169,8 @@
   }
 
   #mapHeading {
-    
     text-align: right;
+    margin-top: 90px;
   }
 
   .profile-photo {
